<resources>
    <string name="app_name">Sportify</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <!-- currentChannel source names -->
    <string name="channel_source_bbc_sports">bbc-sport</string>
    <string name="channel_source_bleacher_report">bleacher-report</string>
    <string name="channel_source_espn">espn</string>
    <string name="channel_source_espn_cric_info">espn-cric-info</string>
    <string name="channel_source_football_italia">football-italia</string>
    <string name="channel_source_four_four_Two">four-four-two</string>
    <string name="channel_source_fox_sports">fox-sports</string>
    <string name="channel_source_le_quipe">lequipe</string>
    <string name="channel_source_marca">marca</string>
    <string name="channel_source_nhl_news">nhl-news</string>
    <string name="channel_source_nfl_news">nfl-news</string>
    <string name="channel_source_talk_sport">talksport</string>
    <string name="channel_source_the_sport_bible">the-sport-bible</string>

    <!-- currentChannel names label-->
    <string name="channel_label_bbc_sports">BBC Sport</string>
    <string name="channel_label_bleacher_report">Bleacher Report</string>
    <string name="channel_label_espn">ESPN</string>
    <string name="channel_label_espn_cric_info">ESPN Cric Info</string>
    <string name="channel_label_football_italia">Football Italia</string>
    <string name="channel_label_four_four_Two">FourFour Two</string>
    <string name="channel_label_fox_sports">Fox Sports</string>
    <string name="channel_label_le_quipe">Le\'quipe</string>
    <string name="channel_label_marca">Marca</string>
    <string name="channel_label_nhl_news">NHL News</string>
    <string name="channel_label_nfl_news">NFL News</string>
    <string name="channel_label_talk_sport">TalkSport</string>
    <string name="channel_label_the_sport_bible">The Sport Bible</string>


    <string name="powered_by">News API</string>
    <string name="news_source">Sports News Source</string>
    <string name="label_dash">- </string>
    <string name="sample_subtitle">BBC News</string>
    <string name="thumbnail_article_image">A thumbnail image provided with news article</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_article_list_fragment">list fragment</string>
    <string name="key_parcellable_article">key_parcellable_article</string>
    <string name="detail_error_message">Something Unexpted Occured!</string>
    <string name="detail_fragment">detail-fragment</string>
    <string name="article_image">article image</string>
    <string name="overview">Overview</string>
    <string name="share">share button</string>
    <string name="btn_text">Read Full Article</string>
    <string name="favorite">favourite button</string>
    <string name="by">By %s</string>
    <string name="tag_detail_fragment">detail fragment</string>
    <string name="mark_as_favourite">Mark as Favourite</string>
    <string name="tag_fav_list_fragment">favourite list fragment</string>
    <string name="tag_fav_fragment_detail">fav detail fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!--Todo add all news channels in settings list -->
    <string name="pref_title_add_friends_to_messages">Select favourite currentChannel</string>
    <string name="key_fav_channel">select fav channel</string>
    <string name="action_sync">Sync data</string>
    <string-array name="pref_example_list_titles">
        <item>BBC Sport</item>
        <item>Bleacher Report</item>
        <item>ESPN</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>bbc-sport</item>
        <item>bleacher-report</item>
        <item>espn</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="appwidget_text">Latest News</string>
    <string name="add_widget">Add widget</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_unit">ca-app-pub-3940256099942544~3347511713</string>
    <string name="link_does_not_exist">Sorry, full article doesn\'t exist</string>

</resources>
