<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/channel_label_bbc_sports"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_bbc_sports" />
        <item
            android:id="@+id/channel_label_bleacher_report"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_bleacher_report" />
        <item
            android:id="@+id/channel_label_espn"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_espn" />
        <item
            android:id="@+id/channel_label_espn_cric_info"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_espn_cric_info" />

        <item
            android:id="@+id/channel_label_football_italia"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_football_italia" />
        <item
            android:id="@+id/channel_label_four_four_Two"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_four_four_Two" />
        <item
            android:id="@+id/channel_label_fox_sports"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_fox_sports" />
        <item
            android:id="@+id/channel_label_le_quipe"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_le_quipe" />

        <item
            android:id="@+id/channel_label_marca"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_marca" />
        <item
            android:id="@+id/channel_label_nhl_news"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_nhl_news" />
        <item
            android:id="@+id/channel_label_nfl_news"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_nfl_news" />

        <item
            android:id="@+id/channel_label_talk_sport"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_talk_sport" />

        <item
            android:id="@+id/channel_label_the_sport_bible"
            android:icon="@drawable/ic_label"
            android:title="@string/channel_label_the_sport_bible" />
    </group>
</menu>