<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.udacitycapstoneproject.ui.main.MainActivity">
    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="100"
        android:icon="@drawable/ic_favourite"
        android:title="@string/mark_as_favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:icon="@drawable/ic_cloud_sync"
        android:title="@string/action_sync"
        app:showAsAction="ifRoom" />

</menu>
